# EasyEmbeddedFramework

./: .buildinfo  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  system_architecture.html  system_overview.html
.copilot/: unit_test_agent.md
.doctrees/: environment.pickle  index.doctree  system_architecture.doctree  system_overview.doctree
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: BUG_FIX_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: document_build.yaml  linux_build.yaml  linux_unit_test.yaml
_sources/: system_overview.rst.txt
_static/: documentation_options.js
cmake/: ez_version.h.in
docs/: conf.py  index.rst  system_architecture.rst
docs/_resources/architecture/: ezArchitecture.drawio
easy_embedded/: ez_easy_embedded.c
easy_embedded/hal/: CMakeLists.txt  ez_hal.c
easy_embedded/hal/gpio/: CMakeLists.txt  ez_gpio.c  ez_gpio.h  gpio.html
easy_embedded/hal/i2c/: ez_i2c.c  ez_i2c.h
easy_embedded/hal/spi/: ez_spi.c  ez_spi.h
easy_embedded/middlewares/: CMakeLists.txt  ez_middlewares.c
easy_embedded/middlewares/network/lwip_port/: CMakeLists.txt  ez_lwip.c  ez_lwip.h
easy_embedded/middlewares/osal/: ez_osal.c  ez_osal_freertos.c  ez_osal_threadx.c  osal.html
easy_embedded/service/: CMakeLists.txt  ez_service.c
easy_embedded/service/cli/: cli.html  ez_cli.c
easy_embedded/service/data_model/: CMakeLists.txt  data_model.html  ez_data_model.c  ez_data_model.h
easy_embedded/service/driver/: driver.html
easy_embedded/service/event_bus/: CMakeLists.txt  event_bus.html  ez_event_bus.c  ez_event_bus.h
easy_embedded/service/event_notifier/: ez_event_notifier.c
easy_embedded/service/ipc/: ipc.html
easy_embedded/service/rpc/: ez_rpc.c  ez_rpc.h  rpc.html
easy_embedded/service/state_machine/: ez_state_machine.c  state_machine.html
easy_embedded/service/task_worker/: task_worker.html
easy_embedded/utilities/: CMakeLists.txt  ez_utilities_common.h
easy_embedded/utilities/assert/: assert.html
easy_embedded/utilities/endian/: ez_endian.h
easy_embedded/utilities/hexdump/: hexdump.html
easy_embedded/utilities/linked_list/: linked_list.html
easy_embedded/utilities/logging/: ez_default_logging_level.h  ez_logging.h  logging.html
easy_embedded/utilities/queue/: ez_queue.c  queue.html
easy_embedded/utilities/ring_buffer/: ring_buffer.html
easy_embedded/utilities/snprintf/: snprintf.h
easy_embedded/utilities/static_alloc/: static_alloc.html
inc/: ez_version.h
inc/hal/: ez_driver_def.h
inc/hal/gpio/: ez_gpio.h
inc/hal/i2c/: ez_i2c.h
inc/hal/spi/: ez_spi.h
inc/hal/uart/: ez_uart.h
inc/middlewares/osal/: ez_osal.h  ez_osal_freertos.h  ez_osal_threadx.h
inc/service/cli/: ez_cli.h
inc/service/data_model/: ez_data_model.h
inc/service/event_bus/: ez_event_bus.h
inc/service/ipc/: ez_ipc.h
inc/service/rpc/: ez_rpc.h
inc/service/state_machine/: ez_state_machine.h
inc/service/task_worker/: ez_task_worker.h
inc/utilities/: ez_utilities_common.h
inc/utilities/assert/: ez_assert.h
inc/utilities/hexdump/: ez_hexdump.h
inc/utilities/linked_list/: ez_linked_list.h
inc/utilities/logging/: ez_logging.h
inc/utilities/queue/: ez_queue.h
samples/linux/: CMakeLists.txt  main.c
samples/linux_freertos/: CMakeLists.txt  main.c
samples/linux_freertos/app_osal/: ez_app_osal.c
samples/linux_freertos/app_task_worker/: ez_worker1.c
samples/linux_threadx/: CMakeLists.txt  features.cmake  main.c
samples/linux_threadx/app_task_worker/: ez_worker2.c
src/: CMakeLists.txt  ez_easy_embedded.c  ez_easy_embedded.h
src/hal/: CMakeLists.txt
src/hal/gpio/: ez_gpio.c
src/hal/i2c/: ez_i2c.c
src/hal/spi/: ez_spi.c
src/hal/uart/: ez_uart.c
src/middlewares/: CMakeLists.txt
src/middlewares/osal/: CMakeLists.txt  ez_osal.h  ez_osal_freertos.c  ez_osal_threadx.c
src/service/: CMakeLists.txt
src/service/cli/: CMakeLists.txt  ez_cli.c
src/service/data_model/: CMakeLists.txt  ez_data_model.c
src/service/event_bus/: CMakeLists.txt  ez_event_bus.c
src/service/ipc/: CMakeLists.txt  ez_ipc.c
src/service/rpc/: CMakeLists.txt  ez_rpc.c
src/service/state_machine/: CMakeLists.txt  ez_state_machine.c
src/service/task_worker/: CMakeLists.txt  ez_task_worker.c
src/utilities/: CMakeLists.txt
src/utilities/assert/: ez_assert.c
src/utilities/hexdump/: ez_hexdump.c
src/utilities/linked_list/: ez_linked_list.c
src/utilities/logging/: ez_logging.c
src/utilities/queue/: ez_queue.c
src/utilities/ring_buffer/: ez_ring_buffer.c
src/utilities/snprintf/: snprintf.c
src/utilities/static_alloc/: ez_static_alloc.c
src/utilities/system_error/: ez_system_error.c
targets/linux/: features.cmake
targets/linux_freertos/: CMakeLists.txt  FreeRTOSConfig.h  features.cmake  main.c
targets/linux_threadx/: features.cmake  main.c
targets/nucleo_f746/: .cproject  .mxproject  .project  ez_target_config.h  features.cmake  nucleo_f746.ioc
tests/: CMakeLists.txt
tests/hal/gpio/: CMakeLists.txt  unittest_ez_gpio.cpp
tests/hal/i2c/: CMakeLists.txt  unittest_ez_i2c.cpp
tests/hal/uart/: CMakeLists.txt  unittest_ez_uart.cpp
tests/middlewares/osal/: CMakeLists.txt  unittest_ez_osal.cpp
tests/service/cli/: CMakeLists.txt  unittest_ez_cli.c
tests/service/datamodel/: CMakeLists.txt  unittest_ez_datamodel.cpp
tests/service/driver/uart/: unittest_ez_uart.c
tests/service/event_bus/: CMakeLists.txt  unittest_ez_event_bus.c
tests/service/rpc/: CMakeLists.txt  unittest_ez_rpc.cpp
tests/service/state_machine/: unittest_ez_state_machine.c
tests/service/task_worker/: unittest_ez_task_worker.c
tests/utilities/linked_list/: unittest_ez_linked_list.c
tests/utilities/queue/: unittest_ez_queue.c
tools/cmake_option_converter/: cmake_option_converter.py
tools/header_features_generator/: generator.py
tools/template_generator/: cmake_template_generator.py  component_template_generator.py  unity_test_template_generator.py
(+60 files in other folders)
